<resources>
    <string name="app_name">Agenda de Contatos</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_endereco">Endereço</string>
    <string name="lbl_datas_especiais">Datas Especiais</string>
    <string name="lbl_grupos">Grupos</string>



    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_alterar">Alterar</string>
    <string name="lbl_excluir">Excluir</string>

    <string name="action_settings">Settings</string>
</resources>
